2017-11-11  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-docbook.tex (docbook.4ht): added support for the quote environment.

2017-11-10  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-env.tex (tex4ht.env): use the --exact option for dvisvgm, it
	prevents wrong image clipping in some cases.

2017-10-25  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): define dummy vallue for
	\Gin@page when it is undefined.

2017-10-22  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-ooffice.tex (ooffice.4ht): added configurations for
	frenchb spaces.
	* tex4ht-ooffice.tex (ooffice-mml.4ht): Changed definition of
	\:nbsp macro to produce actual non-breaking space.
	http://tug.org/pipermail/tex4ht/2017q4/001852.html

2017-10-21  Karl Berry  <karl@freefriends.org>

	* tex4ht-fonts-noncjk.tex
     (ctib -> tex4ht.dir/texmf/tex4ht/ht-fonts/iso8859/1/tibetan/ctib.htf,
  ctib-uni -> tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/tibetan/ctib.htf):
        correct |jobname to `jobname for this context.

	* tex4ht-fonts-noncjk.tex
     (lacc-uni -> tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/lh/lh-t2a/lacc.htf),
	* tex4ht-4ht.tex (graphicx.4ht): copyright.

2017-10-18  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (graphicx.4ht): add xbb support for pdf and svg.
	* tex4ht-html4.tex (html4.4ht): use pdf2svg for pdf to svg
	conversion, the pdf images will be converted to png by default,
	use "svg" option to request the svg output.

2017-10-16  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (usepackage.4ht): added support for TikZ
	externalization.
	http://puszcza.gnu.org.ua/bugs/?371
	* tex4ht-html4.tex (html4.4ht): added support for pdf image inclusion.

2017-10-01  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-noncjk.tex 
        (tex4ht.dir/texmf/tex4ht/ht-fonts/alias/lh/lh-t2a/labi.htf,
         tex4ht.dir/texmf/tex4ht/ht-fonts/alias/lh/lh-t2a/latc.htf,
         tex4ht.dir/texmf/tex4ht/ht-fonts/alias/lh/lh-t2a/lait.htf):