@@ -411,6 +411,11 @@ dest_java = $(dest_src)/java
 update = cp -pr
 mkdir = install -d
 #
+update-env:
+	$(mkdir) $(dest_base)/unix $(dest_base)/win32
+	$(update) tex4ht.env-unix $(dest_base)/unix/
+	$(update) tex4ht.env-win32 $(dest_base)/win32/
+
 update: all
 	$(update) $(tex4ht_bibtex2_derived) $(dest_src)/
 #
@@ -423,9 +428,7 @@ update: all
 #
 	$(update) $(tex4ht_docbook_derived) $(dest_texmf)/
 #
-	$(mkdir) $(dest_base)/unix $(dest_base)/win32
-	$(update) tex4ht.env-unix $(dest_base)/unix/
-	$(update) tex4ht.env-win32 $(dest_base)/win32/
+	$(MAKE) update-env
 #
 	$(update) $(tex4ht_html_speech_xtpipes_derived) $(dest_texmf)/
 #
