@@ -2,8 +2,8 @@
 % compile 3 times:     latex tex4ht-docbook   
 %                or  xhlatex tex4ht-docbook "html,3,sections+"
 %
-% Copyright (C) 2009-2016 TeX Users Group
-% Copyright (C) 2000-2009 Eitan M. Gurari
+% Copyright 2009-2017 TeX Users Group
+% Copyright 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -28,8 +28,8 @@
 
 \<docbook\><<<
 % docbook.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009-2016 TeX Users Group
-% Copyright (C) |CopyYear.2000. Eitan M. Gurari
+% Copyright 2009-2017 TeX Users Group
+% Copyright |CopyYear.2000. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
 
